--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.5.0",
-    "styled-components": "^6.1.17"
+    "styled-components": "^6.1.17",
+    "vercel": "^41.6.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
